--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -186,7 +186,7 @@
 
 8. In the  **Add backend pool** blade, click **OK**.
 
-9. In the ResDevWebLB blade, click **Probes**, and then in the  **Probes** blade, click **Add**.
+9. In the ResDevWebLB blade, click **Health Probes**, and then in the  **Health Probes** blade, click **Add**.
 
 10. In the  **Add probe** blade, specify the following settings, and then click **OK**:
 
@@ -288,7 +288,7 @@
 
 5. In the  **Inbound security rules** blade, click **Add**.
 
-6. In the  **Add inbound security rue** blade, specify the following settings:
+6. In the  **Add inbound security rules** blade, along the top click **Advanced** specify the following settings:
 
 
   - Name:  **allow-http**
@@ -310,7 +310,7 @@
 
 1. Click  **OK**.
 
-2. In the breadcrumb trail at the top of the portal interface, click  **ResDevWebRG** to return to the **ResDevWebRG** blade.
+2. Close this blade to return to the **ResDevWebRG** blade.
 
 3. In the  **ResDevWebRG** blade, in the **Resources** tile, click the **ResDevWebNSG2** entry representing the network security group (with the icon in the form of a shield). This will open the corresponding blade along with its **Settings** blade.
 
@@ -318,7 +318,7 @@
 
 5. In the  **Inbound security rules** blade, click **Add**.
 
-6. In the  **Add inbound security rules** blade, specify the following settings:
+6. In the Add inbound security rules blade, along the top click **Advanced**, specify the following settings:
 
 
   - Name:  **allow-http**
@@ -340,7 +340,7 @@
 
 1. Click  **OK**.
 
-2. In the breadcrumb trail at the top of the portal interface, click  **ResDevWebRG** to return to the **ResDevWebRG** blade.
+2. Close this blade to return to the **ResDevWebRG** blade.
 
 3. In the  **ResDevWebRG** blade, in the **Resources** tile, click **ResDevWebLB**, representing the load balancer.
 
@@ -396,7 +396,7 @@
 
   - Name:  **_Accept the default_**
 
-  - Type:  **Standard**
+  - Type:  **HDD**
 
   - Size:  **1023**
 
@@ -405,7 +405,7 @@
   - Host caching:  **None**
 
 
-1. Repeat the steps 4 and 5 to attach one more new data disks. Note that with current VM size (Standard A1), there is a limit of 2 data disks per VM.
+1. Repeat the steps 4 and 5 to attach **two** more new data disks. Note that with current VM size (Standard A1), there is a limit of 2 data disks per VM.
 
 
 
@@ -459,7 +459,7 @@
 
 24. On the  **Completion** page, click **Close**.
 
-25. From the desktop of ResDevWebVM1, open File Explorer, and then verify that there is a new drive F with 2 TB of available disk space.
+25. From the taskbar of ResDevWebVM1, open File Explorer, and then verify that there is a new drive F with 2 TB of available disk space.
 
 26. Close the Remote Desktop session to ResDevWebVM1.
 
