--- a/Instructions/20533C_LAB_AK_07.md
+++ b/Instructions/20533C_LAB_AK_07.md
@@ -302,7 +302,7 @@ Connection Timeout=30;
 5. Click  **OK**.
 
 6. Wait for the restore operation to complete by monitoring  **Notifications** area in the portal or on the **Audit Logs** blade (this can take several minutes).
->  **Note:** If the initial restore attempt fails, try again.
+>  **Note:** If the initial restore attempt fails, wait a few minutes then try again.
 7. In SQL Server Management Studio, in Object Explorer, under your Azure SQL Database server, right-click the  **Databases** folder and click **Refresh** to verify that the operations database has been restored.
 
 8. In SQL Server Management Studio, click  **New Query** and enter the following Transact-SQL code in the new query pane:
