Replace old virtual machine blade into compute
Replace old virtual machine blade into compute

--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -86,9 +86,9 @@
 
 3. On the  **Dashboard** of the Azure portal, click **+New** on the **Hub** menu.
 
-4. In the  **New** blade, click **Virtual Machines**.
+4. In the  **New** blade, click **Compute**.
 
-5. In the  **Virtual Machines** blade, click **Windows Server 2012 R2 Datacenter**.
+5. In the  **Compute** blade, click **Windows Server 2012 R2 Datacenter**.
 
 6. In the  **Windows Server 2012 R2 Datacenter** blade, ensure that **Resource Manager** appears in the **Select a deployment model** drop-down list, and then click **Create**. The  **Create virtual machine** blade appears and expands its **Basics** blade.
 
