--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -29,6 +29,8 @@
   - Resource group name:  **ResDevWebRG**
 
   - Location:  **_T_ _he Azure region closest to the location of your lab computer_**_._
+  
+  - Managed: **No**
 
 
 1. Click  **Create**. Wait for deployment to complete. This should take only a few seconds.
