--- a/Instructions/20533C_LAB_04.md
+++ b/Instructions/20533C_LAB_04.md
@@ -62,6 +62,8 @@ The main tasks for this exercise are as follows:
   - Resource group name:  **ResDevWebRG**
 
   - Location:  **_The Azure region closest to the location of your lab computer_**
+  
+  - Managed: **No**
 
 
 4. From the Azure portal, create a new _Windows Server 2012 R2 Datacenter_ virtual machine with the following settings:
