take into account the Use managed disks option

--- a/Instructions/20533C_LAB_04.md
+++ b/Instructions/20533C_LAB_04.md
@@ -84,6 +84,8 @@ The main tasks for this exercise are as follows:
   - Location:  **_The same location you chose for the availability set_**
 
   - Size:  **A1 Standard**
+  
+  - Use managed disk: **No**
 
   - Storage account:  **_Accept the default_**
 
@@ -118,6 +120,8 @@ The main tasks for this exercise are as follows:
   - Location:  **_The same location you chose for the availability set_**
 
   - Size:  **A1 Standard**
+
+  - Use managed disks: **No**
 
   - Storage account:  **_Accept the default_**
 
