Update to take into account managed disks

--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -67,6 +67,8 @@
 
 3. In the  **Settings** blade, specify the following settings:
 
+  - Use managed disks: **No**
+  
   - Storage account:  **_Accept the default_**_._
 
   - Virtual network:  **ResDevWebVNet**
@@ -118,7 +120,8 @@
 
 3. In the  **Settings** blade, specify the following settings:
 
-
+  - Use managed disks: **No**
+  
   - Storage account:  **_Accept the default_**_._
 
   - Virtual network:  **ResDevWebVNet**
