--- a/Instructions/20533C_LAB_AK_11.md
+++ b/Instructions/20533C_LAB_AK_11.md
@@ -107,7 +107,7 @@
 
 2. In the Automation Accounts blade, click the Automation account you created in Exercise 1 Task 1. 
 
-3. In the Settings blade click  **Assets**.
+3. Click  **Assets**.
 
 4. On the  **Assets** blade, notice that you have several Windows PowerShell modules included in your account by default.
 
