Corrections to 20533C_LAB_AK_03.md
Lines 21-31, corrected formatting to match previous labs
Lines 34-48, corrected misnumbering
Line 57, 128, 236, & 244, added escape charaters so path will render
correctly in Pandoc to docx
Line 61, added bold formatting to "F5"
Line 83, added bold to names
Lines 91-92, corrected Note formatting and added bold to names
Lines 100-105, corrected formatting to match previous labs
Line 105, corrected misnumbering
Line 124, "available" misspelled
Line 138 & 140, updated version numbers to match version numbers updated
script
Lines 153-169, changed formatting to match previous labs
Line 172, changed "click" to "select" (if the student clicks on the box,
it will de-select)
Lines 172-188, correct misnumbering
Line 196, added missing UAC "yes" command
Lines 196-224, corrected misnumbering
Lines 240-241, & 246-247, added bold to names, fixed Notes formatting
Lines 253-267, corrected formatting to match previous labs
Line 264, corrected misnumbering
Lines 278-280, the blade has changed, corrected for new look
Line 282, added bold formatting to names

--- a/Instructions/20533C_LAB_AK_03.md
+++ b/Instructions/20533C_LAB_AK_03.md
@@ -18,34 +18,34 @@
 6. On the Basics blade, specify the following:
 
 
-  -  **Name:** ResDevDB1
+  -  Name: **ResDevDB1**
 
-  -  **VM disk type:** HDD
+  -  VM disk type: **HDD**
 
-  -  **User name:** Student
+  -  **User name: **Student**
 
-  -  **Password:** Pa$$w0rd1234
+  -  Password: **Pa$$w0rd1234**
   
-  -  **Confirm password:** Pa$$w0rd1234
+  -  Confirm password: **Pa$$w0rd1234**
 
-  -  **Subscription:** _Your subscription_
+  -  Subscription: **_Your subscription_**
 
 
-1.  In the **Resource group** section, click **Use existing** and then, in the drop-down list and click **ResDevRG**. 
+7.  In the **Resource group** section, click **Use existing** and then, click in the drop-down list and click **ResDevRG**. 
 
-2. Accept the default Location value and click  **OK**.
+8. Accept the default Location value and click  **OK**.
 
-3. On the Choose a size blade, click  **A1 Standard** and then click  **Select**.
+9. On the Choose a size blade, click  **A1 Standard** and then click  **Select**.
 
-4. On the Settings blade, ensure that  **HQ-VNET** is selected as the **Virtual network**.
+10. On the Settings blade, ensure that  **HQ-VNET** is selected as the **Virtual network**.
 
-5. Click  **Subnet**.
+11. Click  **Subnet**.
 
-6. On the Choose subnet blade, click  **Database**.
+12. On the Choose subnet blade, click  **Database**.
 
-7. On the Settings blade, click  **OK**
+13. On the Settings blade, click  **OK**
 
-8. On the Summary blade, click  **OK**.
+14. On the Summary blade, click  **OK**.
 
 >  **Note:** You can monitor the virtual machine's deployment progress on the Dashboard page.
 
@@ -54,11 +54,11 @@
   
 1. On MIA-CL1, click the  **Start** button, type **ISE**, and then click  **Windows PowerShell ISE**.
 
-2. In the Windows PowerShell Integrated Scripting Environment (ISE) window, open the  **CreateRmVM.ps1**script at  **D:\Labfiles\Lab03\Starter\**
+2. In the Windows PowerShell Integrated Scripting Environment (ISE) window, open the  **CreateRmVM.ps1** script at  **D:\\Labfiles\\Lab03\\Starter\\**
 
 3. In the Windows PowerShell ISE window, review the content of the script.
 
-4. In the Windows PowerShell ISE, click the  **Run Script** icon or press F5.
+4. In the Windows PowerShell ISE, click the  **Run Script** icon or press **F5**.
 
 5. In the Sign into your account window, type the name and password of an account that is either the Service Administrator or Co-administrator of your Azure subscription, and then click  **Sign in**.
 
@@ -80,7 +80,7 @@
   Get-AzureRmResource | where {$_.ResourceType -like "*VirtualMachines"}
   ```
 
-2. Confirm that the ResDevDB1 and the ResDevDB2 virtual machines are listed. Note that both virtual machines belong to the ResDevRG resource group.
+2. Confirm that the **ResDevDB1** and the **ResDevDB2** virtual machines are listed. Note that both virtual machines belong to the **ResDevRG** resource group.
 
 
 
@@ -88,8 +88,8 @@
   
 1. On MIA-CL1, switch to Internet Explorer.
 
-2. In the Internet Explorer window, in the Azure portal, on the Hub menu, click  **All resources**.
->  **Note:** Note that both ResDevDB1 and ResDevDB2 are listed, along with the network and storage resources that you created in the previous exercise.
+2. In the Internet Explorer window, in the Azure portal, on the Hub menu, click  **All resources**. Note that both **ResDevDB1** and **ResDevDB2** are listed, along with the network and storage resources that you created in the previous exercise.
+
 3. On the Hub menu, click  **Virtual machines**.
 
 4. On the Virtual machines blade, click  **ResDevDB1**.
@@ -97,12 +97,12 @@
 5. On the ResDevDB1 blade, confirm the following values:
 
 
-  -  **Resource group:** **ResDevRG**
+  -  Resource group: **ResDevRG**
 
-  -  **Virtual network/subnet: HQ-VNET/Database**
+  -  Virtual network/subnet: **HQ-VNET/Database**
 
 
-1. Repeat steps 4 and 5 for the  **ResDevDB2** virtual machine.
+6. Repeat steps 4 and 5 for the  **ResDevDB2** virtual machine.
 
 
 >  **Result**: After completing this exercise, you will have validated the creation and configuration of Azure Virtual Machines.
@@ -121,11 +121,11 @@
   foreach ($sku in (Get-AzureRmVMImageSku -Location "[Azure_region]" -PublisherName "Canonical" -Offer "UbuntuServer")) {if ((Get-AzureRmVMImage -Location "[Azure_region]" -PublisherName "Canonical" -Offer "UbuntuServer" -Skus $sku.Skus -ErrorAction SilentlyContinue).Count -gt 0) {Write-Host $($sku).Skus}}
   ```
 
-2. In the output displayed in the Windows PowerShell ISE window, note the list of the Ubuntu images avaialble in the Azure region you selected.
+2. In the output displayed in the Windows PowerShell ISE window, note the list of the Ubuntu images available in the Azure region you selected.
 
 3. On MIA-CL1, on the taskbar, click the  **Visual Studio** icon.
 
-4. In Visual Studio, click  **File**, click  **Open**, click  **Project/Solution**, and then browse to  **D:\Labfiles\Lab03\Starter\ResDev\ResDevLinuxDeploy**.
+4. In Visual Studio, click  **File**, click  **Open**, click  **Project/Solution**, and then browse to  **D:\\Labfiles\\Lab03\\Starter\\ResDev\\ResDevLinuxDeploy**.
 
 5. In the Open Project window, click  **ResDevLinuxDeploy.sln**, and then click  **Open**.
 
@@ -135,9 +135,7 @@
 
 8. In the template, identify the values of the **defaultValue** and **allowedValues** entries of the **ubuntuOSVersion** parameter. If these values do not include one of the entries you noted in step 2, perform the following tasks:
 
-  -  identify the last entry from the list you noted in step 2 and replace the **defaultValue** entry of **"14.04.2-LTS"** in the template  with that entry (in double quotes). For example, if the entry you noted was **16.04.0-LTS**, then you would replace **"defaultValue": "14.04.2-LTS",** with **"defaultValue": "16.04.0-LTS",**.
 
-  -  identify the last entry from the list you noted in step 2 and replace the **allowedValues** entry of **"14.04.2-LTS"** in the template  with that entry (in double quotes). For example, if the entry you noted was **16.04.0-LTS**, then you would replace the line **"14.04.2-LTS",** under **"allowedValues": [** with **"16.04.0-LTS",**.
 
 9. In the Solution Explorer pane, right-click  **ResDevLinuxDeploy**, click  **Deploy**, and then click  **New Deployment**.
 
@@ -150,42 +148,46 @@
 13. In the Edit Parameters window, populate the parameter values according to details in the following list:
 
 
-  -  **vmName:** ResDevApp1
+  -  vmName: **ResDevApp1**
 
-  -  **adminUsername:** Student
+  -  adminUsername: **Student**
 
-  -  **adminPassword:** Pa$$w0rd
+  -  adminPassword: **Pa$$w0rd**
 
-  -  **virtualNetworkName:** HQ-VNET
+  -  virtualNetworkName: **HQ-VNET**
 
-  -  **resourceGroupName**: ResDevRG
+  -  resourceGroupName: **ResDevRG**
 
-  -  **subnetName:** App
+  -  subnetName: **App**
 
-  -  **vmSize:** Standard_D1_V2
+  -  vmSize: **Standard_D1_V2**
 
-  -  **ubuntuOSVersion:** 14.04.2-LTS
+  -  ubuntuOSVersion: **14.04.5-LTS** _(Note: if you changed the default in Step 8, use that value.)_
 
-  -  **storageAccountType:** Standard_LRS
+  -  storageAccountType: **Standard_LRS**
 
 
-1. In the Edit Parameters window, click the  **Save passwords** check box, and then click **Save**.
+14. In the Edit Parameters window, select the  **Save passwords** check box, and then click **Save**.
 
-2. In the Deploy to Resource Group window, click  **Deploy**.
+15. In the Deploy to Resource Group window, click  **Deploy**.
+
 >  **Note:** Deployment will run with the output that appears in the Output pane, which is at the bottom of the window. When deployment is complete, you will receive a message stating the template was deployed successfully to resource group ResDevRG.
-3. In the Solution Explorer pane, click  **Azuredeploy.parameters.json**.In the main window pane, notice that the parameters that you entered in the first deployment are saved in this file. You can reuse these parameters for the deployment of the second app server.
 
-4. In the Solution Explorer pane, right-click  **ResDevLinuxDeploy**, click  **Deploy**, and then click  **ResDevRG**.
+16. In the Solution Explorer pane, click  **Azuredeploy.parameters.json**.In the main window pane, notice that the parameters that you entered in the first deployment are saved in this file. You can reuse these parameters for the deployment of the second app server.
 
-5. In the Deploy to Resource Group window, click  **Edit Parameters**.
+17. In the Solution Explorer pane, right-click  **ResDevLinuxDeploy**, click  **Deploy**, and then click  **ResDevRG**.
 
-6. In the Edit Parameters window, in the  **vmNameValue** box, type **ResDevApp2**, and then click  **Save**.
+18. In the Deploy to Resource Group window, click  **Edit Parameters**.
 
-7. In the Deploy to Resource Group window, click  **Deploy**.
+19. In the Edit Parameters window, in the  **vmNameValue** box, type **ResDevApp2**, and then click  **Save**.
+
+20. In the Deploy to Resource Group window, click  **Deploy**.
+
 >  **Note:** Deployment will run with the output that appears in the Output pane, which is at the bottom of the window. When deployment is complete, you will receive a message stating the template was deployed successfully to resource group ResDevRG.
-8. In the Visual Studio, click  **File** and then on the drop-down menu, click **Close Solution**.
 
-9. Leave Visual Studio open.
+21. In the Visual Studio, click  **File** and then on the drop-down menu, click **Close Solution**.
+
+22. Leave Visual Studio open.
 
 
 
@@ -193,35 +195,37 @@
   
 1. On MIA-CL1, on the taskbar, right-click the  **Windows PowerShell** icon and select **Run ISE as Administrator** from the pop-up menu.
 
-2. In the Windows PowerShell ISE, at the command prompt, type the following cmdlet, and then press Enter:
+2. In the User Account Control dialog box, click Yes.
+
+3. In the Windows PowerShell ISE, at the command prompt, type the following cmdlet, and then press Enter:
 
   ```
   Login-AzureRMAccount
   ```
 
-3. When prompted, sign in to your Azure subscription with an account that is either the Service Administrator or Co-administrator of your Azure subscription.
+4. When prompted, sign in to your Azure subscription with an account that is either the Service Administrator or Co-administrator of your Azure subscription.
 
-4. If you have multiple subscriptions associated with your account, at the Windows PowerShell ISE prompt, type the following cmdlet, and then press Enter:
+5. If you have multiple subscriptions associated with your account, at the Windows PowerShell ISE prompt, type the following cmdlet, and then press Enter:
 
   ```
   Get-AzureRmSubscription
   ```
 
-5. Identify the name of the Azure subscription to which you deployed virtual machines in the previous task of this exercise, type in the following cmdlet, and then press Enter (replace  _'Name of your subscription'_ with the actual name of your subscription and make sure to enclose the name of your subscription in single quotes):
+6. Identify the name of the Azure subscription to which you deployed virtual machines in the previous task of this exercise, type in the following cmdlet, and then press Enter (replace  _'Name of your subscription'_ with the actual name of your subscription and make sure to enclose the name of your subscription in single quotes):
 
   ```
   Set-AzureRmContext -SubscriptionName 'Name of your subscription'
   ```
 
-6. Type the following cmdlet, and then press Enter:
+7. Type the following cmdlet, and then press Enter:
 
   ```
   Find-AzureRMResource -ResourceGroupNameContains ResDevRG | Format-Table -Property ResourceName, ResourceType
   ```
 
-7. In the cmdlet output, note the resources created in this exercise:  **ResDevApp1** and **ResDevApp2** virtual machines, and an NIC, public IP, and storage account for each virtual machine.
+8. In the cmdlet output, note the resources created in this exercise:  **ResDevApp1** and **ResDevApp2** virtual machines, and an NIC, public IP, and storage account for each virtual machine.
 
-8. Leave the Windows PowerShell ISE window open for the next exercise.
+9. Leave the Windows PowerShell ISE window open for the next exercise.
 
 
 >  **Result**: After completing this exercise, you will have deployed Azure Virtual Machines by using Visual Studio and an Azure Resource Manager template.
@@ -233,35 +237,35 @@
   
 1. In the Windows PowerShell ISE window that you opened in the previous exercise, click  **File**, and then click  **Open**. 
 
-2. In the  **Open** dialog box, navigate to the **D:\Labfiles\Lab03\Starter\ResDev** folder.
+2. In the  **Open** dialog box, navigate to the **D:\\Labfiles\\Lab03\\Starter\\ResDev** folder.
 
 3. Click  **ResDevWindowsDeploy.ps1**, and then click  **Open**.
 
-4. In the Windows PowerShell ISE window, review the script that will initiate the template.
->  **Note:** Note the $templateFile and $rgName variables. These represent the location of the Azure Resource Manager template file and the resource group to which you will deploy the virtual machines.
+4. In the Windows PowerShell ISE window, review the script that will initiate the template. Note the **$templateFile** and **$rgName** variables. These represent the location of the Azure Resource Manager template file and the resource group to which you will deploy the virtual machines.
+
 5. Switch to Visual Studio and click  **File**, click  **Open**, and then click  **File**.
 
-6. In the  **Open File** dialog box, navigate to the **D:\Labfiles\Lab03\Starter\ResDev** folder.
+6. In the  **Open File** dialog box, navigate to the **D:\\Labfiles\\Lab03\\Starter\\ResDev** folder.
 
-7. Click  **ResDevWindowsDeployTemplate.json**, and then click  **Open**.
->  **Note:** Note that the template has the same structure as the template for the Linux virtual machines in the previous exercise. The only difference between the two templates is the variables declaring the image and operating system details.
+7. Click  **ResDevWindowsDeployTemplate.json**, and then click  **Open**. Note that the template has the same structure as the template for the Linux virtual machines in the previous exercise. The only difference between the two templates is the variables declaring the image and operating system details.
+
 8. Close Visual Studio.
 
 9. Switch back to the Windows PowerShell ISE window and run the  **ResDevWindowsDeploy.ps1** script. When prompted, provide the following values for the parameter prompts, pressing Enter after each value:
 
 
-  -  **vmName:** **ResDevWeb1**
+  -  vmName: **ResDevWeb1**
 
-  -  **adminUsername:** **Student**
+  -  adminUsername: **Student**
 
-  -  **adminPassword:** **Pa$$w0rd**
+  -  adminPassword: **Pa$$w0rd**
 
-  -  **virtualNetworkName:** **HQ-VNET**
+  -  virtualNetworkName: **HQ-VNET**
 
-  -  **subnetName:** **Web**
+  -  subnetName: **Web**
 
 
-1. When the script completes, repeat step 9, changing only the value of the vmName parameter to  **ResDevWeb2**
+10. When the script completes, repeat step 9, changing only the value of the **vmName** parameter to  **ResDevWeb2**
 
 
 
@@ -275,11 +279,11 @@
 
 4. On the Resource groups blade, click  **ResDevRG**.
 
-5. On the ResDevRG blade, in the Summary section, view the  **Resource** list. Click the ellipsis (...) in the lower-right corner to see all of the resources in this resource group.
->  **Note:** Note the virtual machines and the NIC and public IP resources for each virtual machine.
-6. On the Resources blade, click  **ResDevWeb1**. 
+5. On the ResDevRG blade, under the **Essentials** section, view the resources list. Scroll down to see all of the resources in this resource group. Note the virtual machines and the NIC and public IP resources for each virtual machine.
 
-7. On the ResDevWeb1 blade, in the Essentials section, note that ResDevWeb1 has been assigned to the  **HQ-VNet/Web** virtual network/subnet, and the operating system is **Windows**.
+6. On the resources list, click  **ResDevWeb1**. 
+
+7. On the **ResDevWeb1** blade, in the **Essentials** section, note that ResDevWeb1 has been assigned to the  **HQ-VNet/Web** virtual network/subnet, and the operating system is **Windows**.
 
 8. Close Internet Explorer.
 
