--- a/Instructions/20533C_LAB_AK_02.md
+++ b/Instructions/20533C_LAB_AK_02.md
@@ -306,7 +306,7 @@ Set-AzureSubscription -SubscriptionName 'Name of your subscription'
 
 14. In the  **Upload Certificate** dialog box, click **BROWSE FOR FILE**.
 
-15. In the  **Choose File to Upload** dialog box, navigate to **C:\Program Files (x86)\Windows Kits\10\bin\x64**, select **AdatumRootCertificate**, and then click ** Open**.
+15. In the  **Choose File to Upload** dialog box, navigate to C:\Program Files (x86)\Windows Kits\10\bin\x64, select **AdatumRootCertificate**, and then click ** Open**.
 
 16. In the  **Upload Certificate** dialog box, click the **check mark** icon.
 
