--- a/Instructions/20533C_LAB_AK_01.md
+++ b/Instructions/20533C_LAB_AK_01.md
@@ -214,7 +214,7 @@
 
 #### Task 2: Manage Azure services and resource groups
   
-1. In the Windows PowerShell ISE window, open the D:\Labfiles\Lab01\Starter\Lab01Starter.ps1 file.
+1. In the Windows PowerShell ISE window, open the **D:\Labfiles\Lab01\Starter\Lab01Starter.ps1** file.
 
 2. In the  **#Variables** section, modify the **$locName** variable to match the Azure location that your instructor asked you to use.
 
